# Cloud-Storage-Wrapper

./: .gitignore  .pre-commit-config.yaml  helpful_commands.sh  pyproject.toml
src/cloud_storage_wrapper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cloud_storage_wrapper/oci_access/: config.py  files.py  pandas.py
test/: conftest.py  example_file.txt  test_oci.py
