[project]
name = "cloud-storage-wrapper"
version = "0.0.3"
license = {file = "LICENSE"}
authors = [
  {email = "jakobs.dataprojects@gmail.com"},
  {name = "Jakob Baier"}
]
description = "A package for easily accessing Blob storage in different cloud environment"
dependencies = ["ocifs>=1.2.0,<1.3", "oci>=2.0.0,<3.0.0", "pyarrow>=13.0.0,<14.0.0", "requests", "pandas>=2.0, <2.2", "pydantic~=2.6", ]

[project.urls]
homepage = "https://example.com"
documentation = "https://readthedocs.org"
repository = "https://github.com"
changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = [
  "tox",
  "pytest>=7.0",
  "pytest-cov[all]",
  "seaborn>=0.11.1",
  "ipykernel",
  "psutil~=5.9"
]


[tool.tox]
legacy_tox_ini = """
[tox]
min_version = 4.0
envlist = py38, py39, py310, py311
isolated_build = True

[testenv]
commands =
  pytest -s --cov=cloud_storage_wrapper
deps =
    pytest>=7.0
    pytest-cov
    seaborn>=0.11.1

[testenv:ruff]
deps =
    ruff
commands =
    ruff {posargs:src test}


[testenv:format]
skip_install = True
deps =
    black
commands =
    black {posargs:--check --diff src test}


[testenv:typecheck]
deps =
    mypy
    types-termcolor
commands = mypy --ignore-missing-imports {posargs:src test}


[testenv:build]
# Configuration for the build environment
whitelist_externals = tox
commands =
  tox
  tox -e typecheck
  tox -e ruff
  tox -e format
  pyproject-build

"""

[tool.ruff]
ignore = ["E501"]

[tool.refurb]
ignore = [126]